--- a/src/main/resources/templates/app/views/room/manage/RoomForm.html
+++ b/src/main/resources/templates/app/views/room/manage/RoomForm.html
@@ -43,14 +43,14 @@
           <select class="form-control" name="roomtypeid" ng-model="$data.roomtypeid" ng-options="type.rmtypeid as type.rmtypename for type in roomTypes" required ng-change="selectType($data.roomtypeid)"></select>
         </div>
       </div>
-      <div class="form-group col-md-6">
+      <!-- <div class="form-group col-md-6">
         <div>
           <label>朝向</label>
         </div>
         <div>
           <input type="text" class="form-control" />
         </div>
-      </div>
+      </div> -->
       <div class="form-group col-md-6">
         <div>
           <label>IP</label>
