--- a/src/main/resources/templates/app/views/room/manage/RoomRange.html
+++ b/src/main/resources/templates/app/views/room/manage/RoomRange.html
@@ -83,18 +83,18 @@
           <select class="form-control" name="roomtypeid" ng-model="$data.roomtypeid" ng-options="type.rmtypeid as type.rmtypename for type in roomTypes" required ng-change="selectType($data.roomtypeid)"></select>
         </div>
       </div>
-      <div class="form-group col-md-6">
+      <!-- <div class="form-group col-md-6">
         <div>
           <label>朝向</label>
         </div>
         <div>
           <input type="text" class="form-control" />
         </div>
-      </div>
+      </div> -->
     </form>
   </div>
   <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="$close(data)" ng-disabled="form.$invalid"><i class="glyphicon glyphicon-ok-sign"></i> 确定</button>
+    <button class="btn btn-primary" ng-click="$close($data)" ng-disabled="form.$invalid"><i class="glyphicon glyphicon-ok-sign"></i> 确定</button>
     <button class="btn btn-default" ng-click="$dismiss()"><i class="glyphicon glyphicon-remove-sign"></i> 取消</button>
   </div>
 </div>
