--- a/src/main/resources/templates/app/index.html
+++ b/src/main/resources/templates/app/index.html
@@ -13,7 +13,7 @@
     <link href="css/manage.css" rel="stylesheet" />
     <!--     <link href="css/cropper.min.css" rel="stylesheet" />     -->
     <link theme path="css" normal="theme-dark" />
-    <script id="app" src="js/require.min.js" data-main="main.js" data-args="v=2.1.4" data-debug="true" data-server="/backend" data-index="main.roomhome"></script>
+    <script id="app" src="js/require.min.js" data-main="main.js" data-args="v=2.1.4" data-debug="true" data-server="" data-index="main.roomhome"></script>
 </head>
 
 <body ui-view style="overflow:hidden">
