默认楼栋，启用禁用设备

--- a/src/main/resources/templates/app/modules/room/components/manage/build.html
+++ b/src/main/resources/templates/app/modules/room/components/manage/build.html
@@ -19,7 +19,7 @@
       <td title="'地下室层数'">{{row.subFloor}}</td>
       <td title="'操作'">
         <div class="btn-group btn-group-xs">
-          <button class="btn btn-info" ng-click="me.default(row.id)">
+          <button class="btn btn-info" ng-click="me.default(row.buildingId)">
             <i class="glyphicon glyphicon-unchecked"></i>
           </button>
           <button class="btn btn-default" ng-click="me.edit(row)">
